Fix toList calls